fixed number overflow and C button

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 }
 .calc_body{
     height:500px;
-    width:360px;
+    width:370px;
     border: 1px solid black;
     border-radius: 15px;
 }
@@ -16,7 +16,7 @@ body{
     border: 1px solid black;
     border-radius: 10px;
     height:80px;
-    width: 330px;
+    width: 340px;
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: auto;
